[package]
name = "coord"
version = "0.2.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
description = "A simple, intuitive vector mathematics crate"
license = "MIT/Apache-2.0"
readme = "README.md"
maintenance = { status = "experimental" }
homepage = "https://github.com/zesterer/coord-rs"
repository = "https://github.com/zesterer/coord-rs"
keywords = ["simple", "vector", "mathematics"]

[dependencies]
