[package]
name = "coord"
version = "0.7.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
description = "A simple, intuitive vector mathematics crate"
license = "MIT"
readme = "README.md"
maintenance = { status = "experimental" }
homepage = "https://github.com/zesterer/coord-rs"
repository = "https://github.com/zesterer/coord-rs"
keywords = ["simple", "vector", "mathematics"]

[dependencies]
num = "0.1"
serde = "1.0"
serde_derive = "1.0"

[features]
large_defaults = []
